# abagames-gunroar

./: .cirrus.yml  .gitignore  .license.template  CMakeLists.txt  Cargo.toml  LICENSE  README  README.md  build.xml  readme.txt  readme_e.txt  rustfmt.toml
cmake/: CMakeDCompiler.cmake.in  CMakeDInformation.cmake  CMakeDetermineDCompiler.cmake  FindDerelict.cmake  FindGL3N.cmake
cmake/Platform/: Linux-gdc-D.cmake  Linux-ldc-D.cmake
resource/: gr.RES  gr.rc  gunroar.desktop  gunroar.rc
src/: CMakeLists.txt  main.rs
src/abagames/: CMakeLists.txt
src/abagames/gr/: CMakeLists.txt  accelerometerandtouch.d  boot.d  bullet.d  crystal.d  enemy.d  field.d  gamemanager.d  letter.d  mouse.d  mouseandpad.d  particle.d  prefmanager.d  reel.d  replay.d  screen.d  shaders.d  shape.d  ship.d  shot.d  soundmanager.d  stagemanager.d  title.d  turret.d
src/abagames/util/: CMakeLists.txt  actor.d  iterator.d  logger.d  math.d  prefmanager.d  rand.d  tokenizer.d  vector.d
src/abagames/util/android/: CMakeLists.txt  assets.d  storage.d
src/abagames/util/gl/: CMakeLists.txt  gl.d
src/abagames/util/sdl/: CMakeLists.txt  accelerometer.d  displaylist.d  gamemanager.d  input.d  luminous.d  mainloop.d  mouse.d  pad.d  recordableinput.d  screen.d  screen3d.d  sdlexception.d  shaderprogram.d  shape.d  sound.d  texture.d  touch.d  twinstick.d
src/abagames/util/support/: CMakeLists.txt  gl.d  paths.d  paths.d.in
src/android/: .gitignore  AndroidManifest.xml  CMakeLists.txt  android_install.cmake.in  ant.properties.in  build.xml  toolchain.cmake
src/android/jni/: .gitignore  Android.mk  Application.mk  SDL-missing-joystick-function.patch  SDL_mixer-arm.patch  SDL_mixer-options.patch
src/android/jni/gunroar/: Android.mk
src/android/jni/src/: Android.mk  Android.mk.in  SDL_android_main.c
src/android/res/values/: strings.xml
src/android/src/net/benboeckel/abagames/gunroar/: GunroarActivity.java
src/android/src/org/libsdl/app/: SDLActivity.java
src/game/: data.rs  entities.rs  field.rs  gunroar.rs  letter.rs  mod.rs  render.rs  state.rs
src/game/entities/: bullet.rs  crystal.rs  enemy.rs  field.rs  letter.rs  mod.rs  reel.rs  score_indicator.rs  ship.rs  shot.rs  stage.rs  title.rs  turret.rs
src/game/entities/enemies/: mod.rs
src/game/entities/enemies/ship/: mod.rs  spec.rs
src/game/entities/enemies/turret/: group.rs  mod.rs  moving_group.rs  normal.rs  spec.rs
src/game/entities/particles/: fragment.rs  mod.rs  smoke.rs  spark.rs  spark_fragment.rs  wake.rs
src/game/entities/particles/shader/: fragment.glslf  smoke.glslv  spark.glslf  spark.glslv  spark_fragment.glslv  wake.glslf  wake.glslv
src/game/entities/shader/: field_panel.glslv  field_sidebar.glslf  field_sidebar.glslv  letter.glslf  letter.glslv  ship.glslf  ship.glslv  ship_line.glslv  ship_sight.glslv  title_logo.glslf  title_logo.glslv  title_logo_fill.glslf  title_logo_fill.glslv  title_logo_line.glslf  title_logo_line.glslv  turret_sight.glslf  turret_sight.glslv
src/game/entities/shapes/: bullet.rs  collision.rs  enemy.rs  mod.rs  shape.rs  shield.rs  shot.rs  turret.rs
src/game/entities/shapes/shader/: crystal.glslv  loop.glslv  pillar.glslv  shield.glslf  shield.glslv  shot.glslv  square_loop.glslv  uniform2.glslv  uniform3.glslf  uniform3.glslv
src/game/shader/: field_panel.glslf  field_panel.glslv  letter.glslv
