[package]
name = "gunroar"
version = "0.1.0"
authors = ["Ben Boeckel <mathstuf@gmail.com>"]
readme = "README.md"
license = "BSD-2-Clause"
repository = "https://github.com/mathstuf/abagames-gunroar"
homepage = "https://github.com/mathstuf/abagames-gunroar/tree/rust"

[dependencies]
#abagames-util = "~0.1"
cgmath = "~0.15"
clap = "^2.20"
error-chain = "~0.11"
gfx = "~0.16"
image = { version = "~0.17", default-features = false, features = ["bmp"] }
itertools = "~0.7"
lazy_static = "~0.2"
log = "~0.4"
rayon = "~0.8"
sdl2 = "~0.30"

[dependencies.abagames-util]
path = "../../rust-abagames-util/src"
