[package]
name = "gunroar"
version = "0.1.0"
authors = ["Ben Boeckel <mathstuf@gmail.com>"]
readme = "README.md"
license = "BSD-2-Clause"
repository = "https://github.com/mathstuf/abagames-gunroar"
homepage = "https://github.com/mathstuf/abagames-gunroar/tree/rust"

[dependencies]
#abagames-util = "~0.1"
cgmath = "~0.16"
clap = "^2.20"
error-chain = "~0.11"
gfx = "~0.17"
image = { version = "~0.19", default-features = false, features = ["bmp"] }
itertools = "~0.7"
lazy_static = "^1.0"
log = "~0.4"
rayon = "^1.0"
sdl2 = "~0.31"

[dependencies.abagames-util]
path = "../../rust-abagames-util/src"
