[package]
name = "gunroar"
version = "0.1.0"
authors = ["Ben Boeckel <mathstuf@gmail.com>"]
readme = "README.md"
license = "BSD-2-Clause"
repository = "https://github.com/mathstuf/abagames-gunroar"
homepage = "https://github.com/mathstuf/abagames-gunroar/tree/rust"
edition = "2018"

[dependencies]
#abagames-util = "~0.1"
cgmath = "~0.17"
clap = "^2.20"
gfx = "~0.18"
image = { version = "~0.23", default-features = false, features = ["bmp"] }
itertools = "~0.9"
lazy_static = "^1.0"
log = "~0.4"
rayon = "^1.0"
sdl2 = "~0.32"
thiserror = "^1.0"

[dependencies.abagames-util]
git = "https://github.com/mathstuf/rust-abagames-util"
